2009-04-14  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: (_wrap_g_file_copy_async) change argument order
	to keep it consistent with the other methods.

2009-04-13  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 578870 – memory leak in gio.File.copy_async

	* gio/gio.override (PyGIONotify): Add 'slaves' field.
	(pygio_notify_new_slave): New function.
	(pygio_notify_reference_callback): Recurse for slaves, if any.
	(pygio_notify_free): Likewise.

	* gio/gfile.override (file_progress_callback_marshal): Use new
	chaining functionality to avoid leaking the second PyGIONotify
	structure.  Rename 'callback' as 'progress_callback' for clarity.

2009-04-12  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs: (g_file_monitor) should accept None
	for cancellable and set the default flag to G_FILE_MONITOR_NONE.

2009-04-09  Jonathan Matthew  <jonathan@d14n.org>

	Bug 575781 – pyg_notify_free needs to ensure it has GIL before calling
	Py_XDECREF

	* gio/gio.override:  Ensure we're holding the GIL before potentially
	destroying the callback and data.

2009-04-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override:
	(_wrap_g_file_set_display_name_async) Wrap new GFile method.
	
	* tests/test_gio.py: Test the above methods.

2009-04-05  Tristan Hill  <stan@saticed.me.uk>

	reviewed by: Gustavo J. A. M. Carneiro.

	* glib/pygoptioncontext.c (pyg_option_get_context): Add a
	semi-private method to return the option context C object from an
	option context wrapper.  Used in gnome-python for fixing Bug
	#507174.

2009-04-05  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/pygtype.c (pyg_value_from_pyobject): Bug 577999 –
	converting a negative long Python value to a GUINT64 GValue
	doesn't error out as it should.

2009-04-04  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override:
	(_wrap_g_file_set_attributes_async)
	(_wrap_g_file_set_attributes_finish) Wrap new GFile methods.
	
	* tests/test_gio.py: Test the above methods.